--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "redis": "^5.8.2",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   }
